fixed scrollbar bug and position #68

--- a/src/frontend/src/app/home-page/popups/popups.component.css
+++ b/src/frontend/src/app/home-page/popups/popups.component.css
@@ -1,4 +1,5 @@
 .popup-container {
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -63,6 +64,6 @@
 }
 
 .popup-content{
-  height: 90%;
+  height: 40%;
   width: 100%;
 }
